--- a/PI/new.css
+++ b/PI/new.css
@@ -6,18 +6,17 @@ body{
     background-color: black;
     font-size: 50px;
     margin-top: 100px;
+    margin-bottom: 50px;
     padding: 40px;
-    width: 1200px;
+    width: 85%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: 2px solid white;
     border-radius: 100px;
     cursor: pointer;
 }
-.conteiner-fluid{
-   text-align: center; 
-}
 .empty{
     margin-top: 250px;
     opacity: 0.4;
     font-size: 50px;
+    text-align: center;
 }
