--- a/PI/create.css
+++ b/PI/create.css
@@ -29,6 +29,22 @@ label{
     padding: 8px;
 }
 
+.infos{
+    display: grid;
+    grid-template-columns: 200px 70%; /* label | input */
+    gap: 12px 20px;
+    align-items: center;
+    justify-content: center;
+    width: 50%;                  /* limita largura total */
+    padding: 20px;
+    font-size: larger;
+}
+
+.infos input {
+  padding: 6px;
+  width: 100%;
+}
+
 .lab{
     margin-right: 40%;
     margin-bottom: 20px;
@@ -54,15 +70,20 @@ label{
 }
 
 .atributos {
-    display: flex;
-    flex-direction: column;
+  display: grid;
+  grid-template-columns: 200px 210px; /* label | input */
+  gap: 12px 20px;
+  align-items: center;
+  justify-content: center;
+  width: center;                  /* limita largura total */
+  padding: 20px;
+  font-size: larger;
 }
 
 .atributos input {
-    margin-bottom: 10px;
-    padding: 6px;
+  padding: 6px;
+  width: 100%;
 }
-
 #sub {
     width: 100%;
     padding: 20px;
@@ -75,6 +96,9 @@ label{
     cursor: pointer;
 }
 
-sub:hover {
-    background-color: #45a049;
+.save{
+    margin-bottom: 50px;
+    margin-top: 30px;
+    width: 30% !important;
+    justify-content: center;
 }
